update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -147,7 +147,7 @@
 
 ## 代码实现
 
-在**LeetCode**中有一道题就是根据后缀表达式求值：
+在**LeetCode**中有一道题就是根据后缀表达式求值——[剑指 Offer II 036. 后缀表达式](https://leetcode.cn/problems/8Zf90G/)
 
 >根据[ 逆波兰表示法](https://baike.baidu.com/item/逆波兰式/128437)，求该后缀表达式的计算结果。
 >
