update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -106,6 +106,8 @@
 - 遍历到$F$，直接将其加入到后缀表达式当中，则当前的后缀表达式为$ABCD-*+EF$。
 - 最终将栈中所有的运算符都弹出，得到的后缀表达式为$ABCD-*+EF/-$。
 
+经过上面的过程就可以将一个中缀表达式转成后缀表达式了，大家如果想要代码实现，只需要在遍历数据的时候根据上面四个规则一个个进行判断即可。
+
 ## 后缀表达式求值
 
 在前文当中我们已经得到了表达式$A + B * (C - D) - E / F$的后缀表达式为$ABCD-*+EF/-$。现在我们需要将这个后缀表达式进行求值。根据后缀表达式求值主要有一下两条规则：
@@ -169,20 +171,6 @@
 >输入：tokens = ["4","13","5","/","+"]
 >输出：6
 >解释：该算式转化为常见的中缀算术表达式为：(4 + (13 / 5)) = 6
->
->示例 3：
->
->输入：tokens = ["10","6","9","3","+","-11","*","/","*","17","+","5","+"]
->输出：22
->解释：
->该算式转化为常见的中缀算术表达式为：
->  ((10 * (6 / ((9 + 3) * -11))) + 17) + 5
->= ((10 * (6 / (12 * -11))) + 17) + 5
->= ((10 * (6 / -132)) + 17) + 5
->= ((10 * 0) + 17) + 5
->= (0 + 17) + 5
->= 17 + 5
->= 22
 
 上面问题的代码如下：
 
