--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -214,3 +214,17 @@ class Solution {
 }
 ```
 
+## 总结
+
+
+
+以上就是本文所有的内容了，希望大家有所收获，我是**LeHung**，我们下期再见！！！（记得**点赞**收藏哦！）
+
+---
+
+更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
+
