update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在本篇文章当中主要跟大家介绍中缀和后缀表达式以及他们在表达式求值当中的应用，这一个比较经典的计算机系统基础问题，但是整个过程比较抽象，本文主要通过图解的方法帮助大家理解这个问题。
+在本篇文章当中主要跟大家介绍中缀和后缀表达式和如何将中缀表达式转化成后缀表达式以及如果使用后缀表达式进行求值，表达式求值这是一个比较经典的计算机系统基础问题，但是整个过程比较抽象，本文主要通过图解的方法帮助大家理解这个问题。
 
 ## 表达式介绍
 
