update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -106,7 +106,7 @@
 - 遍历到$F$，直接将其加入到后缀表达式当中，则当前的后缀表达式为$ABCD-*+EF$。
 - 最终将栈中所有的运算符都弹出，得到的后缀表达式为$ABCD-*+EF/-$。
 
-经过上面的过程就可以将一个中缀表达式转成后缀表达式了，大家如果想要代码实现，只需要在遍历数据的时候根据上面四个规则一个个进行判断即可。
+经过上面的过程就可以将一个中缀表达式转成后缀表达式了，大家如果想要代码实现，只需要在遍历数据的时候根据上面四个规则一个个进行判断即可，程序并不困难，就是逻辑稍微有点多，需要考虑更多的问题，在写代码的时候需要细致一点。
 
 ## 后缀表达式求值
 
@@ -216,7 +216,7 @@ class Solution {
 
 ## 总结
 
-
+本文主要给大家介绍了如何将中缀表达式转化成后缀表达式，以及代码根据后缀表达式求值。本文所谈到的问题可能相对于其他问题来说逻辑上可能更加复杂，需要大家自己阅读和根据文字和图标进行理解。
 
 以上就是本文所有的内容了，希望大家有所收获，我是**LeHung**，我们下期再见！！！（记得**点赞**收藏哦！）
 
