--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -16,7 +16,7 @@
 
 ### 中缀表达式
 
-我们常见的数学表达式就是中缀表达式，比如说：$1 + 2$，像这种我们从小到大经常见到的表达式就叫做中缀表达式，这个表达式的特点就是将**运算符**（加减乘除）放在两个操作数（数字）中间，将**操作数**放在**运算符**的两边。
+我们常见的数学表达式就是中缀表达式，比如说：$1 + 2$，像这种我们从小到大经常见到的表达式就叫做中缀表达式，这个表达式的特点就是将**运算符**（加减乘除）放在两个操作数（数字）中间。
 
 ### 后缀表达式
 
@@ -32,7 +32,7 @@
 
 中缀表达式：$A + B * (C - D) - E / F$
 
-现在我们来将上面的中缀表达式转化成后缀表达式，我们的第一个计算的部分如下：
+现在我们来将上面的中缀表达式转化成后缀表达式，我们的第一个计算的部分如下（括号里面的优先计算）：
 
 <img src="../images/expression/01.png" alt="01" style="zoom:80%;" />
 
@@ -40,15 +40,15 @@
 
 <img src="../images/expression/02.png" alt="01" style="zoom:80%;" />
 
-上面的得到的后缀表达式继续进行转化：
+上面的得到的后缀表达式继续进行转化（现在需要计算$B$乘以后面的那个部分）：
 
 <img src="../images/expression/05.png" alt="01" style="zoom:80%;" />
 
-继续进行转化：
+继续进行转化（从左之后进行计算）：
 
 <img src="../images/expression/06.png" alt="01" style="zoom:80%;" />
 
-继续进行转化：
+继续进行转化（除法的优先级比减法高）：
 
 <img src="../images/expression/07.png" alt="01" style="zoom:80%;" />
 
@@ -58,7 +58,7 @@
 
 ## 程序如何将中缀表达式转化成后缀表达式
 
-将中缀表达式转化成后缀表达式有一下几条规则（下面的栈是存储操作符的栈）：
+将中缀表达式转化成后缀表达式有一下几条规则（下面的栈是存储操作符的栈，而且只存储操作符）：
 
 - 从左到右进行遍历。
 - 遇到操作数，直接加入到后缀表达式当中。
