update infix expression

--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -99,7 +99,7 @@
 
 <img src="../images/expression/16.png" alt="01" style="zoom:80%;" />
 
-- 遍历到$-$，需要将占中优先级大于等于$-$的运算符弹出，则当前的后缀表达式为$ABCD-*+$，再将$-$压入栈中。
+- 遍历到$-$，需要将栈中优先级大于等于$-$的运算符弹出，则当前的后缀表达式为$ABCD-*+$，再将$-$压入栈中。
 
 <img src="../images/expression/17.png" alt="01" style="zoom:80%;" />
 
