--- a/datastructr&algorithm/07表达式求值.md
+++ b/datastructr&algorithm/07表达式求值.md
@@ -44,7 +44,7 @@
 
 <img src="../images/expression/05.png" alt="01" style="zoom:80%;" />
 
-继续进行转化（从左之后进行计算）：
+继续进行转化（从左往后进行计算）：
 
 <img src="../images/expression/06.png" alt="01" style="zoom:80%;" />
 
@@ -58,7 +58,7 @@
 
 ## 程序如何将中缀表达式转化成后缀表达式
 
-将中缀表达式转化成后缀表达式有一下几条规则（下面的栈是存储操作符的栈，而且只存储操作符）：
+将中缀表达式转化成后缀表达式有以下几条规则（下面的栈是存储操作符的栈，而且只存储操作符）：
 
 - 从左到右进行遍历。
 - 遇到操作数，直接加入到后缀表达式当中。
@@ -116,7 +116,7 @@
 
 ## 后缀表达式求值
 
-在前文当中我们已经得到了表达式$A + B * (C - D) - E / F$的后缀表达式为$ABCD-*+EF/-$。现在我们需要将这个后缀表达式进行求值。根据后缀表达式求值主要有一下两条规则：
+在前文当中我们已经得到了表达式$A + B * (C - D) - E / F$的后缀表达式为$ABCD-*+EF/-$。现在我们需要将这个后缀表达式进行求值。根据后缀表达式求值主要有以下两条规则：
 
 - 如果遇到数字直接将其加入到数字栈。
 - 如果遇到操作符直接从操作数栈弹出两个数据进行对应的运算，再将运算结果加入到栈中。
@@ -127,7 +127,7 @@
 
 <img src="../images/expression/21.png" alt="01" style="zoom:80%;" />
 
-- 现在遍历到$-$，我们需要将$D$和$C$弹出，然后进行$-$操作的运算，在将结果压入栈中。
+- 现在遍历到$-$，我们需要将$D$和$C$弹出，然后进行$-$操作的运算，再将结果压入栈中。
 
 <img src="../images/expression/23.png" alt="01" style="zoom:80%;" />
 
@@ -222,7 +222,7 @@ class Solution {
 
 ## 总结
 
-本文主要给大家介绍了如何将中缀表达式转化成后缀表达式，以及代码根据后缀表达式求值。本文所谈到的问题可能相对于其他问题来说逻辑上可能更加复杂，需要大家自己阅读和根据文字和图标进行理解。
+本文主要给大家介绍了如何将中缀表达式转化成后缀表达式，以及代码根据后缀表达式求值。本文所谈到的问题可能相对于其他问题来说逻辑上可能更加复杂，需要大家自己阅读和根据文字和图进行理解。
 
 以上就是本文所有的内容了，希望大家有所收获，我是**LeHung**，我们下期再见！！！（记得**点赞**收藏哦！）
 
