add self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -1,1 +1,12 @@
 # 自己动手写并发工具类(Semaphore, CyclicBarrier, CountDownLatch)是什么体验？
+
+## 前言
+
+在本篇文章当中首先给大家介绍三个工具`Semaphore, CyclicBarrier, CountDownLatch`该如何使用，然后会跟大家一起用`ReentrantLock`实现这三个工具。
+
+## 并发工具类的使用
+
+### CountDownLatch
+
+
+
