update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -43,3 +43,7 @@ public class CountDownLatchDemo {
 
 在上面的代码当中，主线程通过调用`latch.await();`将自己阻塞住，然后需要等他其他线程调用方法`latch.countDown()`只有这个方法被调用的次数等于在初始化时给`CountDownLatch`传递的参数时，主线程才会被释放。
 
+### CyclicBarrier
+
+>`CyclicBarrier`它要做的事情是，让一 组线程到达一个屏障（也可以叫同步点）时被阻塞，直到最后一个线程到达屏障时，屏障才会开门，所有被屏障拦截的线程才会继续运行。我们通常也将`CyclicBarrier`称作**路障**。
+
