update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -47,3 +47,35 @@ public class CountDownLatchDemo {
 
 >`CyclicBarrier`它要做的事情是，让一 组线程到达一个屏障（也可以叫同步点）时被阻塞，直到最后一个线程到达屏障时，屏障才会开门，所有被屏障拦截的线程才会继续运行。我们通常也将`CyclicBarrier`称作**路障**。
 
+示例代码：
+
+```java
+public class CycleBarrierDemo {
+
+    public static void main(String[] args) {
+        CyclicBarrier barrier = new CyclicBarrier(5);
+
+        for (int i = 0; i < 5; i++) {
+            new Thread(() -> {
+                try {
+                    System.out.println(Thread.currentThread().getName() + "开始等待");
+                    // 所有线程都会调用这行代码
+                    // 在这行代码调用的线程个数不足5
+                    // 个的时候所有的线程都会阻塞在这里
+                    // 只有到5的时候，这5个线程才会被放行
+                    // 所以这行代码叫做同步点
+                    barrier.await();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                } catch (BrokenBarrierException e) {
+                    e.printStackTrace();
+                }
+                System.out.println(Thread.currentThread().getName() + "等待完成");
+            }).start();
+        }
+    }
+}
+```
+
+
+
