update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -77,5 +77,12 @@ public class CycleBarrierDemo {
 }
 ```
 
+我们在初始化`CyclicBarrier`对象时，传递的数字为`5`，这个数字表示只有5个线程到达同步点的时候，那5个线程才会同时被放行，而如果到了6个线程的话，第一次没有被放行的线程必须等到下一次有`5`个线程到达同步点`barrier.await()`时，才会放行5个线程。
 
+- 比如刚开始的时候5个线程的状态如下，**同步点**还没有5个线程到达，因此不会放行。
 
+<img src="../../images/concurrency/20.png" alt="20" style="zoom:80%;" />
+
+- 当有5个线程或者更多的线程到达**同步点**`barrier.await()`的时候，才会放行`5`个线程，注意是5个线程，如果有多的线程必须等到下一次集合5个线程才会进行又一次放行，也就是说每次只放行5个线程。
+
+<img src="../../images/concurrency/21.png" alt="20" style="zoom:80%;" />
