update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -83,6 +83,6 @@ public class CycleBarrierDemo {
 
 <img src="../../images/concurrency/20.png" alt="20" style="zoom:80%;" />
 
-- 当有5个线程或者更多的线程到达**同步点**`barrier.await()`的时候，才会放行`5`个线程，注意是5个线程，如果有多的线程必须等到下一次集合5个线程才会进行又一次放行，也就是说每次只放行5个线程。
+- 当有5个线程或者更多的线程到达**同步点**`barrier.await()`的时候，才会放行`5`个线程，注意是5个线程，如果有多的线程必须等到下一次集合5个线程才会进行又一次放行，也就是说每次只放行5个线程，这也是它叫做`CyclicBarrier`（循环路障）的原因。
 
 <img src="../../images/concurrency/21.png" alt="20" style="zoom:80%;" />
