update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -86,3 +86,47 @@ public class CycleBarrierDemo {
 - 当有5个线程或者更多的线程到达**同步点**`barrier.await()`的时候，才会放行`5`个线程，注意是5个线程，如果有多的线程必须等到下一次集合5个线程才会进行又一次放行，也就是说每次只放行5个线程，这也是它叫做`CyclicBarrier`（循环路障）的原因。
 
 <img src="../../images/concurrency/21.png" alt="20" style="zoom:80%;" />
+
+## 自己动手写并发工具类
+
+### CountDownLatch
+
+```java
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.ReentrantLock;
+
+public class MyCountDownLatch {
+    private ReentrantLock lock = new ReentrantLock();
+    private Condition condition = lock.newCondition();
+    private int curValue;
+
+    public MyCountDownLatch(int targetValue) {
+        this.curValue = targetValue;
+    }
+
+    public void countDown() {
+        lock.lock();
+        try {
+            curValue--;
+            if (curValue <= 0)
+                condition.signalAll();
+        }catch (Exception ignored){}
+        finally {
+            lock.unlock();
+        }
+    }
+
+    public void await() {
+        lock.lock();
+        try {
+            if (curValue > 0)
+                condition.await();
+        }catch (Exception ignored){}
+        finally {
+            lock.unlock();
+        }
+    }
+}
+```
+
