update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -130,3 +130,92 @@ public class MyCountDownLatch {
 }
 ```
 
+### CyclicBarrier
+
+```java
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.ReentrantLock;
+
+public class MyBarrier {
+
+    private ReentrantLock lock = new ReentrantLock();
+    private Condition condition = lock.newCondition();
+    private int threadCount;
+    private int currentThreadNumber;
+    private Runnable runnable;
+
+    public MyBarrier(int count) {
+        threadCount = count;
+    }
+
+    public MyBarrier(int count, Runnable runnable) {
+        this(count);
+        this.runnable = runnable;
+    }
+
+    public void barrier() {
+        lock.lock();
+        currentThreadNumber++;
+        try {
+            if (currentThreadNumber == threadCount) {
+                currentThreadNumber = 0;
+                if (runnable != null) {
+                    new Thread(runnable).start();
+                }
+                condition.signalAll();
+            }else {
+                condition.await();
+            }
+        }catch (Exception ignored){}
+        finally {
+            lock.unlock();
+        }
+    }
+}
+```
+
+### Semaphore
+
+```java
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.ReentrantLock;
+
+public class MySemaphore {
+
+    private ReentrantLock lock = new ReentrantLock();
+    private Condition condition = lock.newCondition();
+    private int semCount;
+    private int curCount;
+
+    public MySemaphore(int semCount) {
+        this.semCount = semCount;
+    }
+
+    public void acquire() {
+        lock.lock();
+        try {
+            curCount++;
+            if (curCount > semCount) {
+                condition.await();
+            }
+        }catch (Exception ignored) {}
+        finally {
+            lock.unlock();
+        }
+    }
+
+    public void release() {
+        lock.lock();
+        try {
+            curCount--;
+            condition.signal();
+        }catch (Exception ignored){}
+        finally {
+            lock.unlock();
+        }
+    }
+}
+```
+
