update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -1,4 +1,4 @@
-# 自己动手写并发工具类(Semaphore, CyclicBarrier, CountDownLatch)是什么体验？
+# 仅需几十行写自己的并发工具类(Semaphore, CyclicBarrier, CountDownLatch)是什么体验？
 
 ## 前言
 
