--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -87,6 +87,42 @@ public class CycleBarrierDemo {
 
 <img src="../../images/concurrency/21.png" alt="20" style="zoom:80%;" />
 
+### Semaphore
+
+>`Semaphore`（信号量）通俗一点的来说就是控制
+
+```java
+import java.util.concurrent.Semaphore;
+import java.util.concurrent.TimeUnit;
+
+public class SemaphoreDemo {
+    public static void main(String[] args) {
+        Semaphore mySemaphore = new Semaphore(5);
+        for (int i = 0; i < 10; i++) {
+            new Thread(() -> {
+                System.out.println(Thread.currentThread().getName() + "准备进入临界区");
+                try {
+                    mySemaphore.acquire();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                System.out.println(Thread.currentThread().getName() + "已经进入临界区");
+                try {
+                    TimeUnit.SECONDS.sleep(2);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                System.out.println(Thread.currentThread().getName() + "准备离开临界区");
+                mySemaphore.release();
+                System.out.println(Thread.currentThread().getName() + "已经离开临界区");
+            }).start();
+        }
+    }
+}
+```
+
+
+
 ## 自己动手写并发工具类
 
 ### CountDownLatch
