update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -89,7 +89,13 @@ public class CycleBarrierDemo {
 
 ### Semaphore
 
->`Semaphore`（信号量）通俗一点的来说就是控制
+>`Semaphore`（信号量）通俗一点的来说就是控制能执行某一段代码的线程数量，他可以控制程序的并发量！
+>
+>`acquire`
+>
+>$\mathcal{R}$
+>
+>`release`
 
 ```java
 import java.util.concurrent.Semaphore;
