update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -89,13 +89,17 @@ public class CycleBarrierDemo {
 
 ### Semaphore
 
->`Semaphore`（信号量）通俗一点的来说就是控制能执行某一段代码的线程数量，他可以控制程序的并发量！
+>`Semaphore`（**信号量**）通俗一点的来说就是控制能执行某一段代码的线程数量，他可以控制程序的并发量！
 >
->`acquire`
+>`semaphore.acquire`
 >
 >$\mathcal{R}$
 >
->`release`
+>`semaphore.release`
+>
+>比如在上面的`acquire`和`release`之间的代码$\mathcal{R}$就是我们需要控制的代码，我们可以通过**信号量**控制在某一个时刻能有多少个线程执行代码$\mathcal{R}$。
+
+示例代码：
 
 ```java
 import java.util.concurrent.Semaphore;
