update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -97,7 +97,7 @@ public class CycleBarrierDemo {
 >
 >`semaphore.release`
 >
->比如在上面的`acquire`和`release`之间的代码$\mathcal{R}$就是我们需要控制的代码，我们可以通过**信号量**控制在某一个时刻能有多少个线程执行代码$\mathcal{R}$。
+>比如在上面的`acquire`和`release`之间的代码$\mathcal{R}$就是我们需要控制的代码，我们可以通过**信号量**控制在某一个时刻能有多少个线程执行代码$\mathcal{R}$。在信号量内部有一个计数器，在我们初始化的时候设置为$N$，当有线程调用`acquire`函数时，计数器需要减一，调用`releas`函数时计数器需要加一，只有当计数器大于0时，线程调用`acquire`时才能够进入代码块$\mathcal{R}$，否则会被阻塞，只有线程调用`release`函数时，被阻塞的线程才能被唤醒，被唤醒的时候计数器会减一。
 
 示例代码：
 
