update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在本篇文章当中首先给大家介绍三个工具`Semaphore, CyclicBarrier, CountDownLatch`该如何使用，然后会跟大家一起用`ReentrantLock`实现这三个工具。
+在本篇文章当中首先给大家介绍三个工具`Semaphore, CyclicBarrier, CountDownLatch`该如何使用，然后仔细剖析这三个工具内部实现的原理，最后会跟大家一起用`ReentrantLock`实现这三个工具。
 
 ## 并发工具类的使用
 
