update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -1,4 +1,4 @@
-# 30行自己写的并发工具类(Semaphore, CyclicBarrier, CountDownLatch)是什么体验？
+# 30行自己写并发工具类(Semaphore, CyclicBarrier, CountDownLatch)是什么体验？
 
 ## 前言
 
@@ -131,11 +131,14 @@ public class SemaphoreDemo {
 }
 ```
 
-
-
 ## 自己动手写并发工具类
 
 ### CountDownLatch
+
+我们在使用`CountDownLatch`时，会有一个线程调用`CountDownLatch`的`await`函数，其他线程会调用`CountDownLatch`的`countDown`函数。在`CountDownLatch`内部会有一个计数器，计数器的值我们在初始化的时候可以进行设置，线程每调用一次`countDown`函数计数器的值就会减一。
+
+- 如果在线程在调用`await`函数之前，计数器的值已经小于或等于0时，调用`await`函数的线程就不会阻塞，直接放行。
+- 如果在线程在调用`await`函数之前，计数器的值大于0时，调用`await`函数的线程就会被阻塞，当有其他线程将计数器的值降低为0时，那么这个将计数器降低为0线程就需要使用`condition.signalAll()`函数将其他所有被`await`阻塞的函数唤醒。
 
 ```java
 import java.util.concurrent.TimeUnit;
