update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -133,6 +133,8 @@ public class SemaphoreDemo {
 
 ## 自己动手写并发工具类
 
+在这一小节当中主要使用`ReentrantLock`实现上面我们提到的三个并发工具类，因此你首先需要了解`ReentrantLock`这个工具。`ReentrantLock`中有两个主要的函数`lock`和`unlock`，主要用于临界区的保护，在同一个时刻只能有一个线程进入被`lock`和`unlock`包围的代码块。
+
 ### CountDownLatch
 
 我们在使用`CountDownLatch`时，会有一个线程调用`CountDownLatch`的`await`函数，其他线程会调用`CountDownLatch`的`countDown`函数。在`CountDownLatch`内部会有一个计数器，计数器的值我们在初始化的时候可以进行设置，线程每调用一次`countDown`函数计数器的值就会减一。
