update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -133,7 +133,7 @@ public class SemaphoreDemo {
 
 ## 自己动手写并发工具类
 
-在这一小节当中主要使用`ReentrantLock`实现上面我们提到的三个并发工具类，因此你首先需要了解`ReentrantLock`这个工具。`ReentrantLock`中有两个主要的函数`lock`和`unlock`，主要用于临界区的保护，在同一个时刻只能有一个线程进入被`lock`和`unlock`包围的代码块。
+>在这一小节当中主要使用`ReentrantLock`实现上面我们提到的三个并发工具类，因此你首先需要了解`ReentrantLock`这个工具。`ReentrantLock`中有两个主要的函数`lock`和`unlock`，主要用于临界区的保护，在同一个时刻只能有一个线程进入被`lock`和`unlock`包围的代码块。除此之外你还需要了解`ReentrantLock.newCondition`函数，这个函数会返回一个条件变量`Condition`，这个条件变量有三个主要的函数`await`、`signal`和`signalAll`，这三个函数的作用和效果跟`Object`类的`wait`、`notify`和`notifyAll`一样，在阅读下文之前，大家首先需要了解他们的用法。
 
 ### CountDownLatch
 
