update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -142,6 +142,8 @@ public class SemaphoreDemo {
 - 如果在线程在调用`await`函数之前，计数器的值已经小于或等于0时，调用`await`函数的线程就不会阻塞，直接放行。
 - 如果在线程在调用`await`函数之前，计数器的值大于0时，调用`await`函数的线程就会被阻塞，当有其他线程将计数器的值降低为0时，那么这个将计数器降低为0线程就需要使用`condition.signalAll()`函数将其他所有被`await`阻塞的函数唤醒。
 
+上面的规则已经将`CountDownLatch`的整体功能描述清楚了，为了能够将代码解释清楚，我将对应的文字解释放在了代码当中：
+
 ```java
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Condition;
@@ -153,12 +155,20 @@ public class MyCountDownLatch {
     private int curValue;
 
     public MyCountDownLatch(int targetValue) {
+        // 我们需要有一个变量去保存计数器的值
         this.curValue = targetValue;
     }
 
     public void countDown() {
+        // curValue 是一个共享变量
+        // 我们需要用锁保护起来
+        // 因此每次只有一个线程进入 lock 保护
+        // 的代码区域
         lock.lock();
         try {
+            // 每次执行 countDown 计数器都需要减一
+            // 而且如果计数器等于0我们需要唤醒哪些被
+            // await 函数阻塞的线程
             curValue--;
             if (curValue <= 0)
                 condition.signalAll();
@@ -171,7 +181,11 @@ public class MyCountDownLatch {
     public void await() {
         lock.lock();
         try {
+            // 如果 curValue 的值大于0
+            // 则说明 countDown 调用次数还不够
+            // 需要将线程挂起 否则直接放行
             if (curValue > 0)
+                // 使用条件变量 condition 将线程挂起
                 condition.await();
         }catch (Exception ignored){}
         finally {
