--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -195,6 +195,36 @@ public class MyCountDownLatch {
 }
 ```
 
+可以使用下面的代码测试我们自己写的`CountDownLatch`：
+
+```java
+public static void main(String[] args) throws InterruptedException {
+    MyCountDownLatch latch = new MyCountDownLatch(5);
+    for (int i = 0; i < 3; i++) {
+        new Thread(() -> {
+            latch.countDown();
+            System.out.println(Thread.currentThread().getName() + "countDown执行完成");
+        }).start();
+    }
+
+    for (int i = 0; i < 10; i++) {
+        new Thread(() -> {
+            try {
+                TimeUnit.SECONDS.sleep(2);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            try {
+                latch.await();
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+            System.out.println(Thread.currentThread().getName() +  "latch执行完成");
+        }).start();
+    }
+}
+```
+
 ### CyclicBarrier
 
 ```java
@@ -228,7 +258,8 @@ public class MyBarrier {
                 if (runnable != null) {
                     new Thread(runnable).start();
                 }
-                condition.signalAll();
+                for (int i = 0; i < threadCount; i++)
+                    condition.signal();
             }else {
                 condition.await();
             }
@@ -237,6 +268,7 @@ public class MyBarrier {
             lock.unlock();
         }
     }
+
 }
 ```
 
