--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -244,21 +244,32 @@ public class MyBarrier {
         threadCount = count;
     }
 
+    /**
+     * 允许传入一个 runnable 对象
+     * 当放行一批线程的时候就执行这个 runnable 函数
+     * @param count
+     * @param runnable
+     */
     public MyBarrier(int count, Runnable runnable) {
         this(count);
         this.runnable = runnable;
     }
-
-    public void barrier() {
+    
+    public void await() {
         lock.lock();
         currentThreadNumber++;
         try {
+            // 如果阻塞的线程数量不到 threadCount 需要进行阻塞
+            // 如果到了需要由这个线程唤醒其他线程
             if (currentThreadNumber == threadCount) {
                 currentThreadNumber = 0;
                 if (runnable != null) {
                     new Thread(runnable).start();
                 }
-                for (int i = 0; i < threadCount; i++)
+                // 唤醒 threadCount - 1 个线程 因为当前这个线程
+                // 已经是在运行的状态 所以只需要唤醒 threadCount - 1
+                // 个被阻塞的线程
+                for (int i = 1; i < threadCount; i++)
                     condition.signal();
             }else {
                 condition.await();
@@ -271,6 +282,32 @@ public class MyBarrier {
 
 }
 ```
+
+下面是测试我们自己写的**路障**的代码：
+
+```java
+MyBarrier barrier = new MyBarrier(5, () -> {
+    System.out.println(Thread.currentThread().getName() + "开启一个新线程");
+    for (int i = 0; i < 1; i++) {
+        System.out.println(i);
+    }
+});
+
+for (int i = 0; i < 5; i++) {
+    new Thread(() -> {
+        System.out.println(Thread.currentThread().getName() + "进入阻塞");
+        try {
+            TimeUnit.SECONDS.sleep(2);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        barrier.await();
+        System.out.println(Thread.currentThread().getName() + "阻塞完成");
+    }).start();
+}
+```
+
+
 
 ### Semaphore
 
