--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -227,6 +227,13 @@ public static void main(String[] args) throws InterruptedException {
 
 ### CyclicBarrier
 
+>`CyclicBarrier`有一个路障（同步点），所以的线程到达路障之后都会被阻塞，当被阻塞的线程个数达到指定的数目的时候，就需要对指定数目的线程进行放行。
+
+- 在`CyclicBarrier`当中会有一个数据`threadCount`，表示在路障需要达到这个`threadCount`个线程的时候才进行放行，放行`threadCount`个线程。
+- 在`CyclicBarrier`当中需要有一个变量`currentThreadNumber`，用于记录当前被阻塞的线程的个数。
+
+根据上面的`CyclicBarrier`要求，写出的代码如下：
+
 ```java
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Condition;
