--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -231,6 +231,7 @@ public static void main(String[] args) throws InterruptedException {
 
 - 在`CyclicBarrier`当中会有一个数据`threadCount`，表示在路障需要达到这个`threadCount`个线程的时候才进行放行，放行`threadCount`个线程。
 - 在`CyclicBarrier`当中需要有一个变量`currentThreadNumber`，用于记录当前被阻塞的线程的个数。
+- 用户还可以给`CyclicBarrier`传入一个`Runnable`对象，当放行的时候需要执行这个`Runnable`对象，你可以新开一个线程去执行这个`Runnable`对象，或者让唤醒其他线程的这个线程执行`Runnable`对象。
 
 根据上面的`CyclicBarrier`要求，写出的代码如下：
 
@@ -239,7 +240,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.ReentrantLock;
 
-public class MyBarrier {
+public class MyCyclicBarrier {
 
     private ReentrantLock lock = new ReentrantLock();
     private Condition condition = lock.newCondition();
@@ -270,6 +271,7 @@ public class MyBarrier {
             // 如果到了需要由这个线程唤醒其他线程
             if (currentThreadNumber == threadCount) {
                 currentThreadNumber = 0;
+                // 如果
                 if (runnable != null) {
                     new Thread(runnable).start();
                 }
@@ -279,6 +281,7 @@ public class MyBarrier {
                 for (int i = 1; i < threadCount; i++)
                     condition.signal();
             }else {
+                // 如果数目还没有达到则需要阻塞线程
                 condition.await();
             }
         }catch (Exception ignored){}
@@ -293,24 +296,26 @@ public class MyBarrier {
 下面是测试我们自己写的**路障**的代码：
 
 ```java
-MyBarrier barrier = new MyBarrier(5, () -> {
-    System.out.println(Thread.currentThread().getName() + "开启一个新线程");
-    for (int i = 0; i < 1; i++) {
-        System.out.println(i);
-    }
-});
-
-for (int i = 0; i < 5; i++) {
-    new Thread(() -> {
-        System.out.println(Thread.currentThread().getName() + "进入阻塞");
-        try {
-            TimeUnit.SECONDS.sleep(2);
-        } catch (InterruptedException e) {
-            e.printStackTrace();
+public static void main(String[] args) throws InterruptedException {
+    MyCyclicBarrier barrier = new MyCyclicBarrier(5, () -> {
+        System.out.println(Thread.currentThread().getName() + "开启一个新线程");
+        for (int i = 0; i < 1; i++) {
+            System.out.println(i);
         }
-        barrier.await();
-        System.out.println(Thread.currentThread().getName() + "阻塞完成");
-    }).start();
+    });
+
+    for (int i = 0; i < 5; i++) {
+        new Thread(() -> {
+            System.out.println(Thread.currentThread().getName() + "进入阻塞");
+            try {
+                TimeUnit.SECONDS.sleep(2);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            barrier.await();
+            System.out.println(Thread.currentThread().getName() + "阻塞完成");
+        }).start();
+    }
 }
 ```
 
