--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -134,6 +134,10 @@ public class SemaphoreDemo {
 ## 自己动手写并发工具类
 
 >在这一小节当中主要使用`ReentrantLock`实现上面我们提到的三个并发工具类，因此你首先需要了解`ReentrantLock`这个工具。`ReentrantLock`中有两个主要的函数`lock`和`unlock`，主要用于临界区的保护，在同一个时刻只能有一个线程进入被`lock`和`unlock`包围的代码块。除此之外你还需要了解`ReentrantLock.newCondition`函数，这个函数会返回一个条件变量`Condition`，这个条件变量有三个主要的函数`await`、`signal`和`signalAll`，这三个函数的作用和效果跟`Object`类的`wait`、`notify`和`notifyAll`一样，在阅读下文之前，大家首先需要了解他们的用法。
+>
+>- 哪个线程调用函数`condition.await`，那个线程就会被挂起。
+>- 如果线程调用函数`conditon.signal`，则会唤醒一个被`condition.await`函数阻塞的线程。
+>- 如果线程调用函数`conditon.signalAll`，则会唤醒所有被`condition.await`函数阻塞的线程。
 
 ### CountDownLatch
 
@@ -141,6 +145,7 @@ public class SemaphoreDemo {
 
 - 如果在线程在调用`await`函数之前，计数器的值已经小于或等于0时，调用`await`函数的线程就不会阻塞，直接放行。
 - 如果在线程在调用`await`函数之前，计数器的值大于0时，调用`await`函数的线程就会被阻塞，当有其他线程将计数器的值降低为0时，那么这个将计数器降低为0线程就需要使用`condition.signalAll()`函数将其他所有被`await`阻塞的函数唤醒。
+- 线程如果想阻塞自己的话可以使用函数`condition.await()`，如果某个线程在进入临界区之后达到了唤醒其他线程的条件，我们则可以使用函数`condition.signalAll()`唤醒所有被函数`await`阻塞的线程。
 
 上面的规则已经将`CountDownLatch`的整体功能描述清楚了，为了能够将代码解释清楚，我将对应的文字解释放在了代码当中：
 
@@ -229,7 +234,7 @@ public static void main(String[] args) throws InterruptedException {
 
 >`CyclicBarrier`有一个路障（同步点），所以的线程到达路障之后都会被阻塞，当被阻塞的线程个数达到指定的数目的时候，就需要对指定数目的线程进行放行。
 
-- 在`CyclicBarrier`当中会有一个数据`threadCount`，表示在路障需要达到这个`threadCount`个线程的时候才进行放行，放行`threadCount`个线程。
+- 在`CyclicBarrier`当中会有一个数据`threadCount`，表示在路障需要达到这个`threadCount`个线程的时候才进行放行，而且需要放行`threadCount`个线程，这里我们可以循环使用函数`condition.signal()`去唤醒指定个数的线程，从而将他们放行。如果线程需要将自己阻塞住，可以使用函数`condition.await()`。
 - 在`CyclicBarrier`当中需要有一个变量`currentThreadNumber`，用于记录当前被阻塞的线程的个数。
 - 用户还可以给`CyclicBarrier`传入一个`Runnable`对象，当放行的时候需要执行这个`Runnable`对象，你可以新开一个线程去执行这个`Runnable`对象，或者让唤醒其他线程的这个线程执行`Runnable`对象。
 
