update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -324,9 +324,14 @@ public static void main(String[] args) throws InterruptedException {
 }
 ```
 
-
-
 ### Semaphore
+
+>`Semaphore`可以控制执行某一段临界区代码的线程数量，在`Semaphore`当中会有两个计数器`semCount`和`curCount`。
+>
+>- `semCount`表示可以执行临界区代码的线程的个数。
+>- `curCount`表示正在执行临界区代码的线程的个数。
+
+这个工具实现起来也并不复杂，具体分析都在注释当中：
 
 ```java
 import java.util.concurrent.TimeUnit;
@@ -347,7 +352,11 @@ public class MySemaphore {
     public void acquire() {
         lock.lock();
         try {
+            // 正在执行临界区代码的线程个数加一
             curCount++;
+            // 如果线程个数大于指定的能够执行的线程个数
+            // 需要将当前这个线程阻塞起来
+            // 否则直接放行
             if (curCount > semCount) {
                 condition.await();
             }
@@ -360,12 +369,45 @@ public class MySemaphore {
     public void release() {
         lock.lock();
         try {
+            // 线程执行完临界区的代码
+            // 将要离开临界区 因此 curCount 
+            // 需要减一
             curCount--;
+            // 如果有线程阻塞需要唤醒被阻塞的线程
+            // 如果没有被阻塞的线程 这个函数执行之后
+            // 对结果也不会产生影响 因此在这里不需要进行
+            // if 判断
             condition.signal();
+            // signal函数只对在调用signal函数之前
+            // 被await函数阻塞的线程产生影响 如果
+            // 某个线程调用 await 函数在 signal 函数
+            // 执行之后，那么前面那次 signal 函数调用
+            // 不会影响后面这次 await 函数
         }catch (Exception ignored){}
         finally {
             lock.unlock();
         }
+    }
+}
+```
+
+使用下面的代码测试我们自己写的`MySemaphore`：
+
+```java
+public static void main(String[] args) {
+    MySemaphore mySemaphore = new MySemaphore(5);
+    for (int i = 0; i < 10; i++) {
+        new Thread(() -> {
+            mySemaphore.acquire();
+            System.out.println(Thread.currentThread().getName() + "已经进入临界区");
+            try {
+                TimeUnit.SECONDS.sleep(2);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            mySemaphore.release();
+            System.out.println(Thread.currentThread().getName() + "已经离开临界区");
+        }).start();
     }
 }
 ```
