update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -412,3 +412,17 @@ public static void main(String[] args) {
 }
 ```
 
+## 总结
+
+在本文当中主要给大家介绍了三个在并发当中常用的工具类该如何使用，然后介绍了我们自己实现三个工具类的细节，其实主要是利用**条件变量**实现的，因为它可以实现线程的阻塞和唤醒，其实只要大家了解**条件变量**的使用方法，和三种工具的需求大家也可以自己实现一遍。
+
+以上就是本文所有的内容了，希望大家有所收获，我是**LeHung**，我们下期再见！！！（记得**点赞收藏**哦！）
+
+---
+
+更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
+
