--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -8,7 +8,7 @@
 
 ### CountDownLatch
 
->`CountDownLatch`最主要的作用是允许一个或多个线程等待其他线程完成操作。比如我们现在有一个任务，有$N$个线程会往数组`data[N]`当中对应的位置根据不同的任务放入数据，然后主线程需要将这个数组当中所有的数据进行求和计算！在这样的场景下，我们就可以使用`CountDownLatch`。
+>`CountDownLatch`最主要的作用是允许一个或多个线程等待其他线程完成操作。比如我们现在有一个任务，有$N$个线程会往数组`data[N]`当中对应的位置根据不同的任务放入数据，在各个线程将数据放入之后，主线程需要将这个数组当中所有的数据进行求和计算，也就是说主线程在各个线程放入之前需要阻塞住！在这样的场景下，我们就可以使用`CountDownLatch`。
 
 上面问题的代码：
 
@@ -33,7 +33,8 @@ public class CountDownLatchDemo {
             }).start();
         }
 
-        // 只有函数 latch.countDown() 至少被调用10主线程才不会被阻塞
+        // 只有函数 latch.countDown() 至少被调用10次
+        // 主线程才不会被阻塞
         // 这个10是在CountDownLatch初始化传递的10
         latch.await();
         System.out.println("求和结果为：" + Arrays.stream(data).sum());
