update self-writing concurrent tools

--- a/concurrency/java/03自己动手写并发工具类.md
+++ b/concurrency/java/03自己动手写并发工具类.md
@@ -64,8 +64,12 @@ public class CycleBarrierDemo {
                     // 在这行代码调用的线程个数不足5
                     // 个的时候所有的线程都会阻塞在这里
                     // 只有到5的时候，这5个线程才会被放行
-                    // 所以这行代码叫做同步点
+                    // 所以这行代码叫做同步点 
                     barrier.await();
+                    // 如果有第六个线程执行这行代码时
+                    // 第六个线程也会被阻塞 知道第10
+                    // 线程执行这行代码 6-10 这5个线程
+                    // 才会被放行
                 } catch (InterruptedException e) {
                     e.printStackTrace();
                 } catch (BrokenBarrierException e) {
@@ -84,7 +88,7 @@ public class CycleBarrierDemo {
 
 <img src="../../images/concurrency/20.png" alt="20" style="zoom:80%;" />
 
-- 当有5个线程或者更多的线程到达**同步点**`barrier.await()`的时候，才会放行`5`个线程，注意是5个线程，如果有多的线程必须等到下一次集合5个线程才会进行又一次放行，也就是说每次只放行5个线程，这也是它叫做`CyclicBarrier`（循环路障）的原因。
+- 当有5个线程或者更多的线程到达**同步点**`barrier.await()`的时候，才会放行`5`个线程，注意是5个线程，如果有多的线程必须等到下一次集合5个线程才会进行又一次放行，也就是说每次只放行5个线程，这也是它叫做`CyclicBarrier`（循环路障）的原因（因为每次放行5个线程，放行完之后重新计数，直到又有5个新的线程到来，才再次放行）。
 
 <img src="../../images/concurrency/21.png" alt="20" style="zoom:80%;" />
 
@@ -98,7 +102,7 @@ public class CycleBarrierDemo {
 >
 >`semaphore.release`
 >
->比如在上面的`acquire`和`release`之间的代码$\mathcal{R}$就是我们需要控制的代码，我们可以通过**信号量**控制在某一个时刻能有多少个线程执行代码$\mathcal{R}$。在信号量内部有一个计数器，在我们初始化的时候设置为$N$，当有线程调用`acquire`函数时，计数器需要减一，调用`releas`函数时计数器需要加一，只有当计数器大于0时，线程调用`acquire`时才能够进入代码块$\mathcal{R}$，否则会被阻塞，只有线程调用`release`函数时，被阻塞的线程才能被唤醒，被唤醒的时候计数器会减一。
+>比如在上面的`acquire`和`release`之间的代码$\mathcal{R}$就是我们需要控制的代码，我们可以通过**信号量**控制在某一个时刻能有多少个线程执行代码$\mathcal{R}$。在信号量内部有一个计数器，在我们初始化的时候设置为$N$，当有线程调用`acquire`函数时，计数器需要减一，调用`release`函数时计数器需要加一，只有当计数器大于0时，线程调用`acquire`时才能够进入代码块$\mathcal{R}$，否则会被阻塞，只有线程调用`release`函数时，被阻塞的线程才能被唤醒，被唤醒的时候计数器会减一。
 
 示例代码：
 
@@ -142,7 +146,7 @@ public class SemaphoreDemo {
 
 ### CountDownLatch
 
-我们在使用`CountDownLatch`时，会有一个线程调用`CountDownLatch`的`await`函数，其他线程会调用`CountDownLatch`的`countDown`函数。在`CountDownLatch`内部会有一个计数器，计数器的值我们在初始化的时候可以进行设置，线程每调用一次`countDown`函数计数器的值就会减一。
+我们在使用`CountDownLatch`时，会有线程调用`CountDownLatch`的`await`函数，其他线程会调用`CountDownLatch`的`countDown`函数。在`CountDownLatch`内部会有一个计数器，计数器的值我们在初始化的时候可以进行设置，线程每调用一次`countDown`函数计数器的值就会减一。
 
 - 如果在线程在调用`await`函数之前，计数器的值已经小于或等于0时，调用`await`函数的线程就不会阻塞，直接放行。
 - 如果在线程在调用`await`函数之前，计数器的值大于0时，调用`await`函数的线程就会被阻塞，当有其他线程将计数器的值降低为0时，那么这个将计数器降低为0线程就需要使用`condition.signalAll()`函数将其他所有被`await`阻塞的函数唤醒。
@@ -239,7 +243,7 @@ public static void main(String[] args) throws InterruptedException {
 - 在`CyclicBarrier`当中需要有一个变量`currentThreadNumber`，用于记录当前被阻塞的线程的个数。
 - 用户还可以给`CyclicBarrier`传入一个`Runnable`对象，当放行的时候需要执行这个`Runnable`对象，你可以新开一个线程去执行这个`Runnable`对象，或者让唤醒其他线程的这个线程执行`Runnable`对象。
 
-根据上面的`CyclicBarrier`要求，写出的代码如下：
+根据上面的`CyclicBarrier`要求，写出的代码如下（分析和解释在注释当中）：
 
 ```java
 import java.util.concurrent.TimeUnit;
@@ -276,8 +280,10 @@ public class MyCyclicBarrier {
             // 如果阻塞的线程数量不到 threadCount 需要进行阻塞
             // 如果到了需要由这个线程唤醒其他线程
             if (currentThreadNumber == threadCount) {
+                // 放行之后需要重新进行计数
+                // 因为放行之后 condition.await();
+                // 阻塞的线程个数为 0
                 currentThreadNumber = 0;
-                // 如果
                 if (runnable != null) {
                     new Thread(runnable).start();
                 }
