update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -2,4 +2,5 @@
 
 ## 前言
 
-在本片文章当中主要通过介绍各种**股票问题**跟大家介绍**状态机动态规划**，主要了解在动态规划当中各种状态是如何进行转移的。
+在本片文章当中主要通过介绍各种**股票问题**跟大家介绍**状态机动态规划**，主要了解在**股票问题**当中是如何在动态规划当中进行状态转移的。
+
