update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -4,7 +4,7 @@
 
 在本片文章当中主要通过介绍各种**股票问题**跟大家介绍**状态机动态规划**，主要了解在**股票问题**当中是如何在动态规划当中进行状态转移的。
 
-## 买卖股票的最佳时机I
+## [买卖股票的最佳时机I](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)
 
 >给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。你只能选择 某一天 买入这只股票，并选择在 未来的某一个不同的日子 卖出该股票。设计一个算法来计算你所能获取的最大利润。返回你可以从这笔交易中获取的最大利润。如果你不能获取任何利润，返回 0 。
 
