update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -26,6 +26,25 @@
 
 ### 暴力解法
 
+在这个问题当中，我们的任务是在某一天买入股票，然后在未来某天再将股票卖出去，那么我们就可以用一个二重循环，第一层循环遍历每一天的股票，第二层循环遍历该天之后的股票，然后找到差值最大的那一天即可！
+
+```java
+class Solution {
+  public int maxProfit(int[] prices){
+    int ans = 0;
+    for (int i = 0; i < prices.length - 1; i++) {
+      for (int j = i + 1; j < prices.length; j++) {
+        ans = Math.max(ans, prices[j] - prices[i]);
+      }
+    }
+    return ans;
+  }
+
+}
+```
+
+上面的代码的时间复杂度为$O(n^2)$，空间复杂度为$O(1)$，由于时间复杂度过高，上面的代码在**Leetcode**上面提交会超时。
+
 ### 贪心解法
 
 ### 动态规划解法
