--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -26,7 +26,7 @@
 
 ### 暴力解法
 
-在这个问题当中，我们的任务是在某一天买入股票，然后在未来某天再将股票卖出去，那么我们就可以用一个二重循环，第一层循环遍历每一天的股票，第二层循环遍历该天之后的股票，然后找到差值最大的那一天即可！
+在这个问题当中，我们的任务是在某一天买入股票，然后在未来某天再将股票卖出去，那么我们就可以用一个二重循环，第一层循环遍历每一天的股票，第二层循环遍历该天之后的股票，然后找到差值最大的那一天即可，也就是寻找某天后面价值最高的股票！
 
 ```java
 class Solution {
@@ -46,5 +46,43 @@ class Solution {
 上面的代码的时间复杂度为$O(n^2)$，空间复杂度为$O(1)$，由于时间复杂度过高，上面的代码在**Leetcode**上面提交会超时。
 
 ### 贪心解法
+
+在暴力解法当中我们思考的是寻找某天后面的最大值，在这个问题当中我们可以换一个角度，就是寻找某天前面股票价值最低的那一天，然后在那一天买进，在当天卖出即可，这个效果和上面暴力解法是一样的。这样的话我们可以用一个数组去存某一天前面价值最小的股票，然后做一个减法即可！这样的话我们可以将时间复杂度降低到$O(n)$。
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int ans = 0;
+    int[] mins = new int[prices.length];
+    int min = Integer.MAX_VALUE;
+    for (int i = 0; i < prices.length; i++) {
+      min = Math.min(min, prices[i]);
+      mins[i] = min;
+    }
+    for (int i = 0; i < prices.length; i++) {
+      ans = Math.max(ans, prices[i] - mins[i]);
+    }
+    return ans;
+  }
+}
+```
+
+上面的代码的时间复杂度为$O(n)$，空间复杂度也是$O(n)$，其实仔细思考一下我们还可以降低空间复杂度：
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int low = Integer.MAX_VALUE;
+    int ans = 0;
+    for (int i = 0; i < prices.length; i++) {
+      low = Math.min(prices[i], low);
+      ans = Math.max(ans, prices[i] - low);
+    }
+    return ans;
+  }
+}
+```
+
+我们在第一次遍历的时候可以顺便求出对应位置的能够获取的最大价值，可以避免第二次遍历。
 
 ### 动态规划解法
