update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -83,6 +83,14 @@ class Solution {
 }
 ```
 
-我们在第一次遍历的时候可以顺便求出对应位置的能够获取的最大价值，可以避免第二次遍历。
+我们在第一次遍历的时候可以顺便求出对应位置的能够获取的最大价值，可以避免第二次遍历。在这个情况下我们的时间复杂度为$O(n)$，空间复杂度为$O(1)$。
 
 ### 动态规划解法
+
+在求解动态规划问题的时候通常的步骤有一下几个：
+
+- 寻找能够表示状态的数组`dp`，即我们需要寻找`dp`的含义，分析需要用几纬数组表示。
+- 通过分析问题，确定动态转移公式。
+- 初始化状态数组。
+- 通过分析动态转移方程，确定数组的遍历顺序。
+
