--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -90,7 +90,13 @@ class Solution {
 在求解动态规划问题的时候通常的步骤有一下几个：
 
 - 寻找能够表示状态的数组`dp`，即我们需要寻找`dp`的含义，分析需要用几纬数组表示。
-- 通过分析问题，确定动态转移公式。
+- 通过分析问题，寻找动态转移公式。
 - 初始化状态数组。
 - 通过分析动态转移方程，确定数组的遍历顺序。
+
+在这个问题当中我们用一个二维数组去表示我们的状态：
+
+`dp[i][0]`表示在第`i`天手上没有股票能够获得的最大的收益。
+
+`dp[i][1]`表示在第`i`天手上存在股票能够获得的最大的收益。
 
