update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -96,7 +96,7 @@ class Solution {
 
 在这个问题当中我们用一个二维数组去表示我们的状态：
 
-`dp[i][0]`表示在第`i`天手上没有股票能够获得的最大的收益。
+- `dp[i][0]`表示在第`i`天手上没有股票能够获得的最大的收益，比如我们在第一天的没有股票的收益为0元。
 
-`dp[i][1]`表示在第`i`天手上存在股票能够获得的最大的收益。
+- `dp[i][1]`表示在第`i`天手上存在股票能够获得的最大的收益，比如我们在第一天买入股票之后收益为`-prices[0]`。
 
