update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -6,7 +6,7 @@
 
 ## [买卖股票的最佳时机I](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)
 
->给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。你只能选择 某一天 买入这只股票，并选择在 未来的某一个不同的日子 卖出该股票。设计一个算法来计算你所能获取的最大利润。返回你可以从这笔交易中获取的最大利润。如果你不能获取任何利润，返回 0 。
+>给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。你只能选择 某一天 买入这只股票，并选择在未来的某一个不同的日子卖出该股票。设计一个算法来计算你所能获取的最大利润。返回你可以从这笔交易中获取的最大利润。如果你不能获取任何利润，返回 0 。
 
 >示例 1：
 >
@@ -94,9 +94,22 @@ class Solution {
 - 初始化状态数组。
 - 通过分析动态转移方程，确定数组的遍历顺序。
 
+#### 状态表示数组
+
 在这个问题当中我们用一个二维数组去表示我们的状态：
 
 - `dp[i][0]`表示在第`i`天手上没有股票能够获得的最大的收益，比如我们在第一天的没有股票的收益为0元。
 
 - `dp[i][1]`表示在第`i`天手上存在股票能够获得的最大的收益，比如我们在第一天买入股票之后收益为`-prices[0]`。
 
+那么我们最后的答案是`dp[N][0]`，这个表示在最后一天，我们的手中不存在股票，即我们将股票买出去能够获取的最大的收益。
+
+#### 状态转移方程
+
+现在我们来分析一下如何进行状态的转移：
+
+- `dp[i][0]`的状态如何从第`i-1`的状态转移过来：
+  - 如果第`i`个状态是手中不存在股票，即`dp[i-1][0]`，那么第`i`个状态也没有股票，那么直接是`dp[i][0] = dp[i - 1][0]`。
+  - 如果第`i`个状态手中存在股票，即`dp[i-1][1]`，那么如果想在第`i`个状态没有股票，那么就需要将股票卖出，那么收益就为`dp[i-1][1] +prices[i]`。
+- `dp[i][1]`的状态如何进行转移：
+  - 如果
