--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -112,7 +112,7 @@ class Solution {
   - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，那么第`i`个状态也没有股票，那么直接是`dp[i][0] = dp[i - 1][0]`，因为没有进行交易。
   - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，那么如果想在第`i`个状态没有股票，那么就需要将股票卖出，那么收益就为`dp[i-1][1] +prices[i]`，即`dp[i][0] = dp[i-1][1] +prices[i]`。
 - `dp[i][1]`的状态如何进行转移：
-  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，而第`i`个状态有股票，那么`dp[i][0] = -prices[i]`，因为买入股票，而且只能够买入一次，因此直接等于`-prices[i]`即可，注意这里不能是`dp[i - 1][0] - prices[i]`。
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，而第`i`个状态有股票，那么`dp[i][0] = -prices[i]`，因为买入股票，而且只能够买入一次，因此直接等于`-prices[i]`即可，注意这里不能是`dp[i - 1][0] - prices[i]`，因为在`dp[i-][0]`当中可能存在先买入再卖出的情况，而题干要求只能买入卖出一次。
   - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，而第`i`个状态有股票，因此不需要进行交易，即`dp[i][1]=dp[i - 1][1]`。
 
 整个代码如下：
@@ -122,7 +122,7 @@ class Solution {
   public int maxProfit(int[] prices) {
     int[][] dp = new int[prices.length][2];
     // 初始化数组 dp[0][0] 默认等于0 不用
-    // 现实初始化
+    // 显示初始化
     dp[0][1] = -prices[0];
     for (int i = 1; i < prices.length; i++) {
       dp[i][0] = Math.max(dp[i - 1][0], dp[i - 1][1] + prices[i]);
