update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -133,3 +133,39 @@ class Solution {
 }
 ```
 
+#### 数组优化（滚动数组优化）
+
+我们可以仔细分析一下上面的状态转移方程，可以发现第`i`行，只以来第`i-1`行，因此我们只使用两纬数组即可。
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int[][] dp = new int[2][2];
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; i++) {
+      dp[i % 2][0] = Math.max(dp[(i - 1) % 2][0], dp[(i - 1) % 2][1] + prices[i]);
+      dp[i % 2][1] = Math.max(dp[(i - 1) % 2][1], -prices[i]);
+    }
+    return dp[(prices.length - 1) % 2][0];
+  }
+}
+```
+
+可以使用位运算稍微优化一下：
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int[][] dp = new int[2][2];
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; i++) {
+      dp[i & 1][0] = Math.max(dp[(i - 1) & 1][0], dp[(i - 1) & 1][1] + prices[i]);
+      dp[i & 1][1] = Math.max(dp[(i - 1) & 1][1], -prices[i]);
+    }
+    return dp[(prices.length - 1) & 1][0];
+  }
+}
+```
+
+最终经过上面的优化动态规划的时间和空间复杂度可以优化到$O(n)$和$O(1)$。
+
