update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -120,7 +120,7 @@ class Solution {
 
   整个状态转移过程如下图所示：
 
-  <img src="/Users/huchang/workdir/CSCore/images/dsal/dp/01-dp38.png" alt="01-dp38" style="zoom:80%;" />
+  <img src="../images/dsal/dp/01-dp38.png" alt="01-dp38" style="zoom:80%;" />
 
 整个代码如下：
 
