--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -142,7 +142,7 @@ class Solution {
 
 #### 数组优化（滚动数组优化）
 
-我们可以仔细分析一下上面的状态转移方程，可以发现第`i`行，只以来第`i-1`行，因此我们只使用两纬数组即可。
+我们可以仔细分析一下上面的状态转移方程，可以发现第`i`行，只依赖第`i-1`行，因此我们只使用两行数组即可，第一行推测出第二行，第二行推测出来的结果再存回第一行.......
 
 ```java
 class Solution {
@@ -158,7 +158,7 @@ class Solution {
 }
 ```
 
-可以使用位运算稍微优化一下：
+可以使用位运算稍微优化一下（下面优化的依赖原理：$a \& (2^n - 1) = a \% 2^n$）：
 
 ```java
 class Solution {
