update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -158,7 +158,7 @@ class Solution {
 }
 ```
 
-可以使用位运算稍微优化一下（下面优化的依赖原理：$a \& (2^n - 1) = a \% 2^n$）：
+可以使用位运算稍微优化一下（下面代码优化的依赖原理$a \& (2^n - 1) = a \% 2^n$）：
 
 ```java
 class Solution {
@@ -175,4 +175,6 @@ class Solution {
 ```
 
 最终经过上面的优化动态规划的时间和空间复杂度可以优化到$O(n)$和$O(1)$。
+
+### 总结
 
