update state machine dp

--- a/datastructr&algorithm/09状态机动态规划.md
+++ b/datastructr&algorithm/09状态机动态规划.md
@@ -96,7 +96,7 @@ class Solution {
 
 #### 状态表示数组
 
-在这个问题当中我们用一个二维数组去表示我们的状态：
+在这个问题当中我们用一个二维数组去表示我们的状态，在这个问题当中主要有两个状态，一个是手上有股票，另一是手上没有股票：
 
 - `dp[i][0]`表示在第`i`天手上没有股票能够获得的最大的收益，比如我们在第一天的没有股票的收益为0元。
 
@@ -177,4 +177,8 @@ class Solution {
 最终经过上面的优化动态规划的时间和空间复杂度可以优化到$O(n)$和$O(1)$。
 
 ### 总结
+
+在上文当中主要介绍了**买卖股票的最佳时机I**各种解决办法，其中最主要想介绍的就是动态规划的方法了，而在动态规划当中最重要的就是状态之间如何进行转换，这个题中其实很像状态机中的状态转换，在这个问题当中只有两种状态之间的转换——有股票和没股票。
+
+
 
